--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "automated-resume-builder",
   "version": "1.0.0",
-  "description": "Automated Resume Builder Pipeline using Jenkins - Generates PDF resumes from JSON data",
+  "description": "Automated Resume Builder Pipeline using Jenkins - Generates PDF resumes using React-PDF",
   "main": "scripts/generateResume.js",
   "scripts": {
     "validate": "node scripts/validateResume.js",
-    "generate": "node scripts/generateResume.js",
+    "generate": "babel-node scripts/generateResume.js",
     "test": "jest --coverage",
     "test:integration": "jest --testPathPattern=integration",
     "test:unit": "jest --testPathPattern=unit",
@@ -16,19 +16,25 @@
     "resume",
     "automation",
     "pdf",
+    "react-pdf",
     "pipeline"
   ],
   "author": "DevOps Engineer",
   "license": "MIT",
   "dependencies": {
-    "handlebars": "^4.7.7",
-    "puppeteer": "^21.6.1"
+    "@react-pdf/renderer": "^3.1.14",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@babel/node": "^7.29.0",
+    "@babel/preset-env": "^7.23.0",
+    "@babel/preset-react": "^7.22.0",
+    "babel-jest": "^29.7.0",
     "jest": "^29.7.0"
   },
   "engines": {
-    "node": ">=14.0.0",
-    "npm": ">=6.0.0"
+    "node": ">=16.0.0",
+    "npm": ">=7.0.0"
   }
 }
